2002-08-08  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/include/lily-guile.hh (scm_int2num): guile 1.4 compatibility. 

	* scm/grob-description.scm (all-grob-descriptions): set
	X-offset-callbacks for TextScript

	* lily/stem.cc (invisible_b): don't use support_head(), since it
	sets stem direction.

	* lily/beam.cc (struct Int_set): don't get stuck inserting
	interval segments of length 0.0.

	* scripts/convert-ly.py:  break-align conversion.

2002-08-06  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/*.cc (process_music): gh_int2scm -> scm_int2num

2002-08-06  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el: Also "C-xC-s" sets default command to LilyPond.

2002-08-05  Rune Zedeler <rune@zedeler.dk>

	* mf/feta-eindelijk.mf: Fix silly typo in 16th and shorter rests.

2002-08-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* stepmake/bin/make-version.py: robustify.

	* input/test/rhythm-excercise.ly: new file

	* input/test/blank-notes.ly: new file

	* lily/note-head.cc (head_extent): robustness fix.
	
	* Documentation/user/preface.itely: add some more.

2002-08-04  Rune Zedeler <rune@zedeler.dk>

	* Documentation/user/refman.itely
	* Documentation/user/internals.itely: Documented "Current" property.
	
2002-08-04  Han-Wen  <hanwen@cs.uu.nl>

	* lily/lily-guile.cc: change gh_str02scm to scm_makfrom0str.

2002-08-04  Werner Lemberg  <wl@gnu.org>

	* tex/lilyponddefs.tex: s/filllastpage/lastpagefill/.
	
	* Documentation/user/refman.itely: Document it.

2002-08-04  Han-Wen  <hanwen@cs.uu.nl>

	* lily/main.cc (sane_putenv): Oops.  Should supply a private copy
	to putenv. (this was actually caught by valgrind, but I didn't
	think the error was mine... )

2002-08-03  Han-Wen  <hanwen@cs.uu.nl>

	* tex/lilyponddefs.tex: add filllastpage support.

	* GNUmakefile.in: barf if config.h is older than configure. 

	* VERSION: released 1.5.71 
	
	* lily/beam.cc (consider_auto_knees): rewrite function; now only
	consider horizontal knees. Fixes input/bugs/bizzarre-beam.ly
